// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListFilters correctly 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
  <select
    onChange={[Function]}
    value="date"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
  <DateRangePicker
    calendarIcon={
      <svg
        className="react-daterange-picker__calendar-button__icon react-daterange-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="15"
          width="15"
          x="2"
          y="2"
        />
        <line
          x1="6"
          x2="6"
          y1="0"
          y2="4"
        />
        <line
          x1="13"
          x2="13"
          y1="0"
          y2="4"
        />
      </svg>
    }
    clearIcon={
      <svg
        className="react-daterange-picker__clear-button__icon react-daterange-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="4"
          x2="15"
          y1="4"
          y2="15"
        />
        <line
          x1="15"
          x2="4"
          y1="4"
          y2="15"
        />
      </svg>
    }
    closeCalendar={true}
    isOpen={null}
    name="daterange"
    onChange={[Function]}
    rangeDivider="–"
    value={
      Array [
        null,
        null,
      ]
    }
  />
</div>
`;

exports[`should render ExpenseListFilters correctly with filters 2 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value="bill"
  />
  <select
    onChange={[Function]}
    value="amount"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
  <DateRangePicker
    calendarIcon={
      <svg
        className="react-daterange-picker__calendar-button__icon react-daterange-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="15"
          width="15"
          x="2"
          y="2"
        />
        <line
          x1="6"
          x2="6"
          y1="0"
          y2="4"
        />
        <line
          x1="13"
          x2="13"
          y1="0"
          y2="4"
        />
      </svg>
    }
    clearIcon={
      <svg
        className="react-daterange-picker__clear-button__icon react-daterange-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="4"
          x2="15"
          y1="4"
          y2="15"
        />
        <line
          x1="15"
          x2="4"
          y1="4"
          y2="15"
        />
      </svg>
    }
    closeCalendar={true}
    isOpen={null}
    name="daterange"
    onChange={[Function]}
    rangeDivider="–"
    value={
      Array [
        null,
        1970-01-05T00:00:00.000Z,
      ]
    }
  />
</div>
`;
